Update and rename 2020-02-26-flake-it-till-you-make-it.md to 2025-05-29-feed-me-2018.md

--- a/_posts/2025-05-29-feed-me-2018.md
+++ b/_posts/2025-05-29-feed-me-2018.md
@@ -2,9 +2,9 @@
 layout: post
 title: Feed me
 subtitle: The bus in 2018
-cover-img: /assets/img/path.jpg
-thumbnail-img: /assets/img/thumb.png
-share-img: /assets/img/path.jpg
+cover-img: /assets/img/FeedMe2018.png
+thumbnail-img: /assets/img/FeedMe2018.png
+share-img: /assets/img/FeedMe2018.png
 tags: [food, beer, armageddon, bus]
 author: OnlyFatness
 ---
