Update and rename 2025-07-03-colab.md to 2025-07-02-colab.md

--- a/_posts/2025-07-02-colab.md
+++ b/_posts/2025-07-02-colab.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: How can you contribute?
-subtitle: We welcome your crazy ideas and input
+subtitle: We welcome your crazy ideas and inputs
 cover-img: /assets/img/OnlyFatnessNameWhite.png
 thumbnail-img: /assets/img/fatness-thanksmike.png
 share-img: /assets/img/fatness-thanksmike.png
